--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <h3>2022</h3>
     <ol>
         <li> Semenov A., Pavlenko A., Chivilikhin D., Kochemazov S. <b>On Probabilistic Generalization of Backdoors in Boolean Satisfiability </b> / 36th AAAI Conference on Artificial Intelligence, 2022
+            <a href="https://www.aaai.org/AAAI22Papers/AAAI-8477.SemenovA.pdf">[pdf]</a>
     </ol>
 
 
