added AAAI22 publication url

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </td><td>
     <h1>Daniil Chivilikhin, PhD</h1> 
  		
-        mailto: chivdan [at] itmo [dot] ru<br/>
+        mailto: chivdan [at] gmail [dot] com<br/>
 
         Associate Professor, Research Associate, Deputy Head of "Discrete optimization and Formal Methods" group @ <a href="http://irc.ifmo.ru/en/87845/mezhdunarodnaya_laboratoriya_kompyuternye_tehnologii.htm">Computer Technologies Laboratory</a>, <a href="http://en.itmo.ru">ITMO University</a>.<br/>
 
