--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  		
         mailto: chivdan [at] gmail [dot] com<br/>
 
-        Associate Professor, Research Associate, Deputy Head of "Discrete optimization and Formal Methods" group @ <a href="http://irc.ifmo.ru/en/87845/mezhdunarodnaya_laboratoriya_kompyuternye_tehnologii.htm">Computer Technologies Laboratory</a>, <a href="http://en.itmo.ru">ITMO University</a>.<br/>
+        Assistant Professor, Research Associate, Deputy Head of "Discrete optimization and Formal Methods" group @ <a href="http://irc.ifmo.ru/en/87845/mezhdunarodnaya_laboratoriya_kompyuternye_tehnologii.htm">Computer Technologies Laboratory</a>, <a href="http://en.itmo.ru">ITMO University</a>.<br/>
 
 <!--        I work in <a href="http://en.ifmo.ru">ITMO University</a> as a researcher at <a href="http://irc.ifmo.ru/en/87845/mezhdunarodnaya_laboratoriya_kompyuternye_tehnologii.htm">Computer Technologies Laboratory</a>.<br/>
 -->
