--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <ol>
         <li> Semenov A., Pavlenko A., Chivilikhin D., Kochemazov S. <b>On Probabilistic Generalization of Backdoors in Boolean Satisfiability </b> / 36th AAAI Conference on Artificial Intelligence, 2022
             <a href="https://www.aaai.org/AAAI22Papers/AAAI-8477.SemenovA.pdf">[pdf]</a>
+
+        <li> [Pavlenko A., Chivilikhin D., Semenov A. Asynchronous Evolutionary Algorithm for Finding Backdoors in Boolean Satisfiability / 2022 IEEE World Congress on Computational Intelligence]
     </ol>
 
 
