added published AAAI paper

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 
     <h3>2022</h3>
     <ol>
-        <li> Semenov A., Pavlenko A., Chivilikhin D., Kochemazov S. <b>On Probabilistic Generalization of Backdoors in Boolean Satisfiability </b> / 36th AAAI Conference on Artificial Intelligence, 2022
-            <a href="https://www.aaai.org/AAAI22Papers/AAAI-8477.SemenovA.pdf">[pdf]</a>
+        <li> Semenov A., Pavlenko A., Chivilikhin D., Kochemazov S. <b>On Probabilistic Generalization of Backdoors in Boolean Satisfiability </b> / 36th AAAI Conference on Artificial Intelligence, Vol. 36, No. 9, pp. 10353-10361, 2022
+            <a href="https://doi.org/10.1609/aaai.v36i9.21277">[aaai.org]</a>
+            <a href="https://ojs.aaai.org/index.php/AAAI/article/view/21277/21026">[pdf]</a>
 
         <li> [Pavlenko A., Chivilikhin D., Semenov A. Asynchronous Evolutionary Algorithm for Finding Backdoors in Boolean Satisfiability / 2022 IEEE World Congress on Computational Intelligence]
     </ol>
