--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://ojs.aaai.org/index.php/AAAI/article/view/21277/21026">[pdf]</a>
 
         <li> Pavlenko A., Chivilikhin D., Semenov A. Asynchronous Evolutionary Algorithm for Finding Backdoors in Boolean Satisfiability / 2022 IEEE World Congress on Computational Intelligence
-            <a href="https://ieeexplore.ieee.org/document/9870262"[ieeexplore.ieee.org]</a>
+            <a href="https://ieeexplore.ieee.org/document/9870262">[ieeexplore.ieee.org]</a>
     </ol>
 
 
