--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <a href="https://doi.org/10.1609/aaai.v36i9.21277">[aaai.org]</a>
             <a href="https://ojs.aaai.org/index.php/AAAI/article/view/21277/21026">[pdf]</a>
 
-        <li> [Pavlenko A., Chivilikhin D., Semenov A. Asynchronous Evolutionary Algorithm for Finding Backdoors in Boolean Satisfiability / 2022 IEEE World Congress on Computational Intelligence]
+        <li> Pavlenko A., Chivilikhin D., Semenov A. Asynchronous Evolutionary Algorithm for Finding Backdoors in Boolean Satisfiability / 2022 IEEE World Congress on Computational Intelligence
+            <a href="https://ieeexplore.ieee.org/document/9870262"[ieeexplore.ieee.org]</a>
     </ol>
 
 
