--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
  		
         mailto: chivdan [at] gmail [dot] com<br/>
 
-        Assistant Professor, Research Associate, Deputy Head of "Discrete optimization and Formal Methods" group @ <a href="http://irc.ifmo.ru/en/87845/mezhdunarodnaya_laboratoriya_kompyuternye_tehnologii.htm">Computer Technologies Laboratory</a>, <a href="http://en.itmo.ru">ITMO University</a>.<br/>
+        Currently, I am a Senior Software Developer for Generative Engineering @ Siemens Industry Software NV, Leuven, Belgium
 
-<!--        I work in <a href="http://en.ifmo.ru">ITMO University</a> as a researcher at <a href="http://irc.ifmo.ru/en/87845/mezhdunarodnaya_laboratoriya_kompyuternye_tehnologii.htm">Computer Technologies Laboratory</a>.<br/>
--->
+        Previously, I was an Assistant Professor and Research Associate @ <a href="http://irc.ifmo.ru/en/87845/mezhdunarodnaya_laboratoriya_kompyuternye_tehnologii.htm">Computer Technologies Laboratory</a>, <a href="http://en.itmo.ru">ITMO University</a>.<br/>
+
 	Research field: SAT solvers, Synthesis, Verification, Evolutionary Algorithms<br/>
 
 	<a href="http://scholar.google.ru/citations?user=MESeOo0AAAAJ&hl=ru">Google Scholar</a><br/>
