--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
  		
         mailto: chivdan [at] gmail [dot] com<br/>
 
-        Currently, I am a Senior Software Developer for Generative Engineering @ Siemens Industry Software NV, Leuven, Belgium.<br/>
+        Currently, I am a Senior Software Developer for Generative Engineering @ Siemens Digital Industries Software, Leuven, Belgium.<br/>
 
-        Previously, I was an Assistant Professor and Research Associate @ <a href="http://irc.ifmo.ru/en/87845/mezhdunarodnaya_laboratoriya_kompyuternye_tehnologii.htm">Computer Technologies Laboratory</a>, <a href="http://en.itmo.ru">ITMO University</a>.<br/>
+        Previously, I was an Assistant Professor and Senior Research Associate @ Computer Technologies Laboratory, <a href="http://en.itmo.ru">ITMO University</a>.<br/>
 
 	Research field: SAT solvers, Synthesis, Verification, Evolutionary Algorithms<br/>
 
