added circuits paper on arxiv

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 
         <li> Pavlenko A., Chivilikhin D., Semenov A. Asynchronous Evolutionary Algorithm for Finding Backdoors in Boolean Satisfiability / 2022 IEEE World Congress on Computational Intelligence
             <a href="https://ieeexplore.ieee.org/document/9870262">[ieeexplore.ieee.org]</a>
+
+        <li> Semenov A., Chukharev K., Tarasov  E., Chivilikhin D., Kondratiev V.
+             Estimating the hardness of SAT encodings for Logical Equivalence Checking of Boolean circuits / CoRR abs/2210.01484, 2000.
+             <a href="https://arxiv.org/abs/2210.01484">[arXiv.org]</a>
     </ol>
 
 
