added AAAI paper

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 
     <h2>Publications</h2>
 
+    <h3>2023</h3>
+    <ol>
+        <li> [Semenov A., Chivilikhin D., Kochemazov S., Dzhiblavi I. Probabilistic Generalization of Backdoor Trees with Application to SAT / 37th AAAI Conference on Artificial Intelligence, 2023]
+    </ol>
+
     <h3>2022</h3>
     <ol>
         <li> Semenov A., Pavlenko A., Chivilikhin D., Kochemazov S. <b>On Probabilistic Generalization of Backdoors in Boolean Satisfiability </b> / 36th AAAI Conference on Artificial Intelligence, Vol. 36, No. 9, pp. 10353-10361, 2022
