--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
             <a href="https://ieeexplore.ieee.org/document/9870262">[ieeexplore.ieee.org]</a>
 
         <li> Semenov A., Chukharev K., Tarasov  E., Chivilikhin D., Kondratiev V.
-             Estimating the hardness of SAT encodings for Logical Equivalence Checking of Boolean circuits / CoRR abs/2210.01484, 2000.
+             Estimating the hardness of SAT encodings for Logical Equivalence Checking of Boolean circuits / CoRR abs/2210.01484, 2022.
              <a href="https://arxiv.org/abs/2210.01484">[arXiv.org]</a>
+
+        <li> [Chivilikhin D., Pavlenko A., Semenov A. Decomposing Hard SAT Instances with Metaheuristic Optimization // International Journal of Artificial Intelligence, 2022]
     </ol>
 
 
