--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <h3>2023</h3>
     <ol>
-        <li> [Semenov A., Chivilikhin D., Kochemazov S., Dzhiblavi I. Probabilistic Generalization of Backdoor Trees with Application to SAT / 37th AAAI Conference on Artificial Intelligence, 2023]
+        <li> [Semenov A., Chivilikhin D., Kochemazov S., Dzhiblavi I. <b>Probabilistic Generalization of Backdoor Trees with Application to SAT</b> / 37th AAAI Conference on Artificial Intelligence, 2023]
     </ol>
 
     <h3>2022</h3>
@@ -59,8 +59,12 @@
         <li> Semenov A., Chukharev K., Tarasov  E., Chivilikhin D., Kondratiev V.
              Estimating the hardness of SAT encodings for Logical Equivalence Checking of Boolean circuits / CoRR abs/2210.01484, 2022.
              <a href="https://arxiv.org/abs/2210.01484">[arXiv.org]</a>
+		
+	<li> Chukharev K., Chivilikhin D. fbSAT: Automatic Inference of Minimal Finite-State Models of Function Blocks Using SAT Solver // IEEE Access
+		<a href="https://ieeexplore.ieee.org/document/9984658">[ieeexplore.ieee.org]</a>
 
         <li> [Chivilikhin D., Pavlenko A., Semenov A. Decomposing Hard SAT Instances with Metaheuristic Optimization // International Journal of Artificial Intelligence, 2022]
+		
     </ol>
 
 
