--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
              Estimating the hardness of SAT encodings for Logical Equivalence Checking of Boolean circuits / CoRR abs/2210.01484, 2022.
              <a href="https://arxiv.org/abs/2210.01484">[arXiv.org]</a>
 		
-	<li> Chukharev K., Chivilikhin D. fbSAT: Automatic Inference of Minimal Finite-State Models of Function Blocks Using SAT Solver // IEEE Access
-		<a href="https://ieeexplore.ieee.org/document/9984658">[ieeexplore.ieee.org]</a>
+        <li> Chukharev K., Chivilikhin D. <b>fbSAT: Automatic Inference of Minimal Finite-State Models of Function Blocks Using SAT Solver </b> // IEEE Access
+             <a href="https://ieeexplore.ieee.org/document/9984658">[ieeexplore.ieee.org]</a>
 
         <li> [Chivilikhin D., Pavlenko A., Semenov A. Decomposing Hard SAT Instances with Metaheuristic Optimization // International Journal of Artificial Intelligence, 2022]
 		
