--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
         Currently, I am a Senior Software Developer for Generative Engineering @ Siemens Digital Industries Software, Leuven, Belgium.<br/>
 
-        Previously, I was an Assistant Professor and Senior Research Associate @ Computer Technologies Laboratory, <a href="http://en.itmo.ru">ITMO University</a>.<br/>
+        Previously, I was an Assistant Professor and Senior Research Associate @ Computer Technologies Laboratory, ITMO University.<br/>
 
 	Research field: SAT solvers, Synthesis, Verification, Evolutionary Algorithms<br/>
 
-	<a href="http://scholar.google.ru/citations?user=MESeOo0AAAAJ&hl=ru">Google Scholar</a><br/>
+	<a href="http://scholar.google.ru/citations?user=MESeOo0AAAAJ">Google Scholar</a><br/>
 
 	<a href="http://www.informatik.uni-trier.de/~ley/pers/hd/c/Chivilikhin:Daniil">DBLP</a><br/>
 
