--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         Previously, I was an Assistant Professor and Senior Research Associate @ Computer Technologies Laboratory, ITMO University.<br/>
 
-	Research field: SAT solvers, Synthesis, Verification, Evolutionary Algorithms<br/>
+	Research field: SAT/CSP solvers, Synthesis, Verification, Evolutionary Algorithms<br/>
 
 	<a href="http://scholar.google.ru/citations?user=MESeOo0AAAAJ">Google Scholar</a><br/>
 
