--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
     <h3>2023</h3>
     <ol>
-        <li> [Semenov A., Chivilikhin D., Kochemazov S., Dzhiblavi I. <b>Probabilistic Generalization of Backdoor Trees with Application to SAT</b> / 37th AAAI Conference on Artificial Intelligence, 2023]
+        <li> Semenov A., Chivilikhin D., Kochemazov S., Dzhiblavi I. <b>Probabilistic Generalization of Backdoor Trees with Application to SAT</b> / 37th AAAI Conference on Artificial Intelligence, 2023
+	     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25525">[aaai.org]</a>
+	     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25525/25297">[pdf]</a>
         <li> Chivilikhin D., Pavlenko A., Semenov A. Decomposing Hard SAT Instances with Metaheuristic Optimization // International Journal of Artificial Intelligence, Vol. 21(2), pp. 61-92, 2023
 	     <a href="http://www.ceser.in/ceserp/index.php/ijai/article/view/6933">[ceser.in]</a>
     </ol>
