--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         Previously, I was an Assistant Professor and Senior Research Associate @ Computer Technologies Laboratory, ITMO University.<br/>
 
-	Research field: SAT/CSP solvers, Synthesis, Verification, Evolutionary Algorithms<br/>
+	Interested in SAT/CSP solvers, Synthesis, Verification, Evolutionary Algorithms, Finite Automata<br/>
 
-	<a href="http://scholar.google.ru/citations?user=MESeOo0AAAAJ">Google Scholar</a><br/>
+	<a href="https://scholar.google.com/citations?hl=en&user=MESeOo0AAAAJ">Google Scholar</a><br/>
 
 	<a href="http://www.informatik.uni-trier.de/~ley/pers/hd/c/Chivilikhin:Daniil">DBLP</a><br/>
 
