--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25525">[aaai.org]</a>
 	     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/25525/25297">[pdf]</a>
         <li> Chivilikhin D., Pavlenko A., Semenov A. Decomposing Hard SAT Instances with Metaheuristic Optimization // International Journal of Artificial Intelligence, Vol. 21(2), pp. 61-92, 2023
+	     <a href="https://arxiv.org/abs/2312.10436">[arXiv.org]</a>
 	     <a href="http://www.ceser.in/ceserp/index.php/ijai/article/view/6933">[ceser.in]</a>
     </ol>
 
