--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@
     <ul>
        <li> PhD thesis: Learning finite-state machines with ant colony optimization. ITMO University, 2015.
             (In Russian: Генерация конечных автоматов на основе муравьиных алгоритмов)
-            <a href="http://is.ifmo.ru/disser/chivilikhin-synopsis.pdf">[synopsis]</a>
-            <a href="http://is.ifmo.ru/disser/chivilikhin-dissertation.pdf">[thesis]</a>
-            <a href="http://is.ifmo.ru/disser/chivilikhin-presentation.pdf">[slides]</a>
+            <a href="papers/chivilikhin-synopsis.pdf">[synopsis]</a>
+            <a href="papers/chivilikhin-dissertation.pdf">[thesis]</a>
+            <a href="papers/chivilikhin-presentation.pdf">[slides]</a>
             
  
        <li> Master thesis: Learning finite-state machines with ant colony optimization. ITMO University, 2013.
