--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<a href="https://scholar.google.com/citations?hl=en&user=MESeOo0AAAAJ">Google Scholar</a><br/>
 
-	<a href="http://www.informatik.uni-trier.de/~ley/pers/hd/c/Chivilikhin:Daniil">DBLP</a><br/>
+	<a href="https://dblp.org/pid/116/9961.html">DBLP</a><br/>
 
         <a href="http://dl.acm.org/author_page.cfm?id=81503693488">ACM</a><br/>
 
@@ -36,6 +36,8 @@
         <a href="http://www.researcherid.com/rid/J-9511-2015">ResearcherID</a><br/>
 
         <a href="https://www.researchgate.net/profile/Daniil_Chivilikhin">ResearchGate</a><br/>
+
+	<a href="https://www.linkedin.com/in/daniil-chivilikhin-a918163a/">LinkedIn</a><br/>
     </td></tr></table>
     <p align = "justify"/> 	
     <br/>
