--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  		
         mailto: chivdan [at] gmail [dot] com<br/>
 
-        Currently, I am a Senior Software Engineer @ Siemens Digital Industries Software, Leuven, Belgium.<br/>
+        Currently, I am Team Lead @ Siemens Digital Industries Software, Leuven, Belgium.<br/>
 
         Previously, I was an Assistant Professor and Senior Research Associate @ Computer Technologies Laboratory, ITMO University.<br/>
 
