add pc member info

--- a/index.html
+++ b/index.html
@@ -337,6 +337,12 @@
             <a href = "http://www.springerlink.com/content/9081131821314l25/">[link.springer.com]</a>
     </ol>
      
+     <h2>Program committee member</h2>
+     <ul>
+          <li> AAAI Conference on Artificial Intelligence, 2023 -- ... </li>
+          <li> European Conference on Artificial Intelligence, 2025 -- ... </li>
+     </ul>
+
 
     <h2>Theses</h2>
     <ul>
