--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         Previously, I was an Assistant Professor and Senior Research Associate @ Computer Technologies Laboratory, ITMO University.<br/>
 
-	Interested in SAT/CSP solvers, Synthesis, Verification, Evolutionary Algorithms, Finite Automata<br/>
+	Expertise in SAT and CSP solvers, Synthesis, Verification, Evolutionary Algorithms, Finite Automata<br/>
 
 	<a href="https://scholar.google.com/citations?hl=en&user=MESeOo0AAAAJ">Google Scholar</a><br/>
 
