Update job title and expertise in index.html
Updated job title and added new expertise.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
  		
         mailto: chivdan [at] gmail [dot] com<br/>
 
-        Currently, I am a Team Lead @ Siemens Digital Industries Software, Leuven, Belgium.<br/>
+        Currently, I am a Senior Software Engineer @ Siemens Digital Industries Software, Leuven, Belgium.<br/>
+		I work on machine learning and optimization.
 
         Previously, I was an Assistant Professor and Senior Research Associate @ Computer Technologies Laboratory, ITMO University.<br/>
 
-	Expertise in SAT and CSP solvers, Synthesis, Verification, Evolutionary Algorithms, Finite Automata<br/>
+	Strong expertise in SAT and CSP solvers, Synthesis, Verification, Evolutionary Algorithms, Finite Automata, Optimization<br/>
 
 	<a href="https://scholar.google.com/citations?hl=en&user=MESeOo0AAAAJ">Google Scholar</a><br/>
 
